# tinker-cookbook

./: .gitignore  .pre-commit-config.yaml  .sync_state  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  TOOL_INTERFACE_UNIFICATION.md  eval_qwen35_35b.md  invocations.md  llms-full.txt  llms.txt  logtree-spec.md  parsing-plan.md  pyproject.toml  run_eval_qwen35.py  test_sample.py
.claude/: .nfs000000001f5c9b92000008a5  install-skills.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: check-links.yaml  claude-review.yml  ghstack_land.yaml  integration-tests.yaml  nightly.yaml  publish-pypi.yaml  pyright.yaml  pytest.yaml  security.yaml  smoke-test-evals.yaml  smoke-test-recipes.yaml  stack-freshness.yaml  sync-to-tinker-docs.yml  sync-tutorials-to-docs.yml  sync-tutorials-to-tinker-docs.yml  weights-e2e.yaml  weights.yaml
docs/: _app.mdx  async.mdx  completers.mdx  dev-tips.mdx  docs-outline.mdx  download-weights.mdx  evals.mdx  index.mdx  lora-primer.mdx  losses.mdx  model-lineup.mdx  preferences.mdx  profiling-design.md  publish-weights.mdx  rendering.mdx  rl.mdx  save-load.mdx  training-sampling.mdx  under-the-hood.mdx  visual-fine-tuning.mdx
docs/api-reference/: apifuture.md  exceptions.md  restclient.md  samplingclient.md  serviceclient.md  trainingclient.md  types.md
docs/compatible-apis/: litellm.mdx  openai.mdx
docs/design/: checkpoint-naming.md
docs/guides/: checkpoint_resume_optimizer_state.md
docs/preferences/: dpo-guide.mdx  rlhf-example.mdx
docs/rl/: rl-basic.mdx  rl-envs.mdx  rl-hyperparams.mdx  rl-logging.mdx  rl-loops.mdx  sequence-extension.mdx
docs/supervised-learning/: prompt-distillation.mdx  sl-basic.mdx  sl-hyperparams.mdx  sl-loop.mdx
docs/visual-fine-tuning/: vlm-training.mdx
example-data/: conversations.jsonl
k8s/: README.md  k8s-dataset.jsonl  k8s_data.py  viz_k8s_dataset.py
notes/: fipo_paper_analysis.md  hypothesis_verification.md  model_decision.md  plan.md  related_work.md
notes/eval/: benchmarks.md
notes/experiments/: 01_arithmetic_baseline.md  02_30b_base_dapo_fipo_vs_grpo.md  02_gsm8k_comparison.md  03_hypothesis_verification.md  monitoring.md
notes/rl/: code_rl_deep_dive.md  longctx_retest.md  mcqa_retest.md  rlhf_kimi_k2_5.md  structured_output_retest.md  super_model_validation.md  swe_agentless_super.md
notes/sft/: packing_test.md
notes/swe/: agentic_experiment.md  agentless_experiment.md  experiment_results.md  research_findings.md
scripts/: smoke_test_recipes.sh
skills/: benchmark-results.md
skills/debug/: SKILL.md
skills/research/: SKILL.md
skills/tinker-checkpoints/: SKILL.md
tests/: compare_sampling_training_logprobs.py  conftest.py  conversation_generator.py  helpers.py  smoke_tests.py  test_daytona_sandbox.py  test_inspect_eval.py  test_install_skills.py  test_modal_sandbox.py  test_recipe_chat_sl.py  test_recipe_dpo.py  test_recipe_guess_number.py  test_recipe_off_policy_reasoning.py  test_recipe_on_policy_distillation.py  test_recipe_on_policy_multi_teacher.py  test_recipe_rlhf_pipeline.py  test_recipe_shorter.py  test_recipe_text_arena.py  test_recipe_twenty_questions.py  test_recipe_vlm_classifier.py  test_tool_calling_e2e.py
tinker_cookbook/: __init__.py  checkpoint_utils.py  checkpoint_utils_test.py  cli.py  cli_test.py  cli_utils.py  cli_utils_test.py  completers.py  completers_test.py  convert_sft_dataset_to_jsonl.py  custom_evaluators.py  display.py  evaluators.py  exceptions.py  exceptions_test.py  hyperparam_utils.py  image_processing_utils.py  image_processing_utils_test.py  inspect_evaluators.py  inspect_utils.py  model_info.py  model_info_test.py  renderers.py  run_inspect_evals.py  tokenizer_utils.py  tokenizer_utils_test.py  tool_types.py  torch_style.py  viz_sft_dataset.py
tutorials/: 01_hello_tinker.ipynb  02_first_sft.ipynb  03_async_patterns.ipynb  04_first_rl.ipynb  05_custom_task.ipynb  06_custom_env.ipynb  101_hello_tinker.py  102_first_sft.py  103_async_patterns.py  104_first_rl.py  201_rendering.py  202_loss_functions.py  203_completers.py  204_weights.py  205_evaluations.py  301_cookbook_abstractions.py  302_custom_environment.py  303_sft_with_config.py  304_rl_with_config.py  401_sl_hyperparams.py  402_rl_hyperparams.py  403_dpo_preferences.py  404_sequence_extension.py  405_multi_agent.py  406_prompt_distillation.py  407_rlhf_pipeline.py  408_why_rl.ipynb  408_why_rl.py  501_export_hf.py  502_lora_adapter.py  503_publish_hub.py  README.md
(+1209 files in other folders)
